5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1637_2445.log
== TEST (2019-04-10 22:58:44) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == c ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == F )
	F = (5*(v - 32))/9
	print(round(F, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (e.lower() == c ):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:14) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = (5*(v - 32))/9
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:59:23) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = (5*(v - 32))/9
	print(round(F, 2))
	
-- EXECUTION TIME:
0.164898
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:32) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = (5*(v - 32))/9
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:43) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = (5*(v - 32))/9
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:07:38) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:08:13) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:08:32) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- EXECUTION TIME:
0.148899
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
582.4
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:00) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:09) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:09:17) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- EXECUTION TIME:
0.140287
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
582.4
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:41) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:52) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (5*(v - 32))/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:12:00) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:12:14) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = ((9 * v) + 32) / 5
	print(round(F, 2))
	
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:28:21) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = (v * 5/9) + 32
	print(round(F, 2))
	
-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:28:45) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = (v * 1,8) + 32
	print(round(F, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    F = (v * 1,8) + 32
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:29:02) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	F = (v * 1.8) + 32
	print(round(F, 2))
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:29:44) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = (v * 1.8) + 32
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:30:37) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	C = (v - 32)*5/9
	print(round(C, 2))
	
else:
	(e.upper() == "F" )
	F = (v * 1.8) + 32
	print(round(F, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:33:03) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	C = 
	print(round(C, 2))
	
else:
	(e.lower() == "c" )
	C = 5/9*(v-32)
	print(round(F, 2))
	
-- ERROR:
File "XXXX", line 5
    C = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:34:21) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	F = 
	print(round(F, 2))
	
else:
	(e.lower() == "c" )
	C = 5/9*(v-32)
	print(round(F, 2))
	
-- ERROR:
File "XXXX", line 5
    F = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:39:15) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	F = 9*v + 160 / 9
	print(round(F, 2))
	
else:
	(e.lower() == "c" )
	C = 5/9*(v-32)
	print(round(F, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(F, 2))
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:39:27) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	F = 9*v + 160 / 9
	print(round(F, 2))
	
else:
	(e.lower() == "c" )
	C = 5/9*(v-32)
	print(round(C, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:40:33) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	F = 9*v + 160 / 9
	print(round(F, 2))
	
else:
	(e.lower() == "c" )
	C = (5*v-160)/9
	print(round(C, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:40:42) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	F = 9*v + 160 / 9
	print(round(F, 2))
	
else:
	(e.lower() == "c" )
	C = (5*v-160)/9
	print(round(C, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:41:33) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.upper() == "F" ):
	F = 9*v/9 + 160/9
	print(round(F, 2))
	
else:
	(e.lower() == "c" )
	C = (5*v/9)-(160/9)
	print(round(C, 2))
	
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:43:46) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	F = 9*v/9 + 160/9
	print(round(F, 2))
	
else:
	(e.upper() == "F" )
	C = (5*v/9)-(160/9)
	print(round(C, 2))
	
-- OUTPUT:
337.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:43:57) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	F = 9*v/9 + 160/9
	print(round(F, 2))
	
else:
	(e.upper() == "F" )
	C = (5*v/9)-(160/9)
	print(round(C, 2))
	
-- OUTPUT:
337.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:44:30) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	F = 9*v/9 + 160/5
	print(round(F, 2))
	
else:
	(e.upper() == "F" )
	C = (5*v/9)-(160/9)
	print(round(C, 2))
	
-- OUTPUT:
352.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:45:02) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	F =( 9*v + 160 )/5
	print(round(F, 2))
	
else:
	(e.upper() == "F" )
	C = (5*v/9)-(160/9)
	print(round(C, 2))
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:45:11) 
-- CODE:
e = input("escala : ")
v = float(input("valor da temperatura: "))

if (e.lower() == "c" ):
	F =( 9*v + 160 )/5
	print(round(F, 2))
	
else:
	(e.upper() == "F" )
	C = (5*v/9)-(160/9)
	print(round(C, 2))
	
-- EXECUTION TIME:
0.16343
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
